--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,16 +10,16 @@
     tools:context="com.example.usuario.laformamasfacil.Menu">
 
     <ScrollView
-        android:layout_width="700px"
-        android:layout_height="900px"
+        android:layout_width="700dp"
+        android:layout_height="900dp"
         android:id="@+id/scrollView"
         android:layout_alignParentBottom="false">
 
     </ScrollView>
 
     <Button
-        android:layout_width="200px"
-        android:layout_height="200px"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/button3"
         android:layout_marginTop="50dp"
         android:layout_alignTop="@+id/scrollView"
@@ -27,8 +27,8 @@
         android:background="@drawable/basico" />
 
     <Button
-        android:layout_width="200px"
-        android:layout_height="200px"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:text="btn1"
         android:id="@+id/button2"
         android:layout_centerVertical="true"
@@ -106,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Basico"
+        android:text="@string/basico"
         android:id="@+id/textView6"
         android:textStyle="bold|italic"
         android:textColor="#4167e5"
